# knowledge_graph

./: .gitignore  Farsi_To_English_Graph_Bridging.md  README.md  RSD.md  docker-compose.yml  main.py  project_progress_report.md  pyproject.toml  qa_interface.py
data/: book_utf8.txt  extracted_graph.json.250728.full  implementation_details.md
src/: config.py  extract.py  graph_schema.py  group_and_refine_schema.py  populate.py  propose_schema_updates.py  refine_schema_from_json.py
src/util/: bulk_curate.py  bulk_curate_v2.py  populate_schema_file.py  translate_existing_graph.py
